# ITMO

./: .gitignore  .travis.yml  Makefile  index.html
Algorithms/AlgoTemplates/AhoKorasik/: main.cpp
Algorithms/AlgoTemplates/Dijkstra/: main.cpp
Algorithms/AlgoTemplates/PrefixFunction/: main.cpp
Algorithms/AlgoTemplates/SufArray/: main.cpp
Algorithms/AlgoTemplates/ZFunction/: main.cpp
Algorithms/Lab/: .gitignore  template.cpp
Algorithms/Lab/Semester_3/3_Strings/: trash.tar.xz
Algorithms/Lab/Semester_4/Maths/: A.cpp  A.d  B.cpp  CMakeLists.txt  D.cpp  E.cpp  F.hs
Android/: README.txt  Баллы@28 дек 2019.xlsx
Android/Homeworks/AndroidCalculatorApp/: .git.tar.xz
Android/Homeworks/AndroidCalculatorApp/app/: build.gradle
Android/Homeworks/PhotoFeed/: .directory  .git.tar.xz  .gitignore  build.gradle
Android/Homeworks/PhotoFeed/app/: build.gradle
Android/Homeworks/RetrofitDemo/app/: build.gradle
Android/Homeworks/RxJavaExperiments/: .git.tar.xz
C++/Sem3/homeworks/: hw4-ref.txt
C++/Sem3/homeworks/HW10/: .git.tar.xz  CMakeLists.txt  Doxyfile  main.cpp
C++/Sem3/homeworks/HW10/Algorithms/: Algorithm.cpp  Algorithm.h  AlgorithmFactory.cpp  AlgorithmFactory.h  DummyAlgorithm.cpp  DummyAlgorithm.h  NearestNeighbourAlgorithm.cpp  NearestNeighbourAlgorithm.h  NearestNeighbourAnnealedAlgorithm.cpp  NearestNeighbourAnnealedAlgorithm.h  SimulatedAnnealingAlgorithm.cpp  SimulatedAnnealingAlgorithm.h  SimulatedAnnealingAlgorithmEx.cpp  SimulatedAnnealingAlgorithmEx.h
C++/Sem3/homeworks/HW10/Metrics/: AverageDrivingDistMetric.cpp  AverageDrivingDistMetric.h  DistanceMetric.cpp  DistanceMetric.h  DummyMetric.cpp  DummyMetric.h  Metric.cpp  Metric.h  MetricFactory.cpp  MetricFactory.h  StdDevMetric.cpp  StdDevMetric.h
C++/Sem3/homeworks/HW10/Utility/: Order.cpp  Order.h  OrderSet.cpp  OrderSet.h  Result.cpp  Result.h
C++/Sem3/homeworks/HW10/samples/annealing_dist_random/: config.txt  orders.txt
C++/Sem3/homeworks/HW10/samples/annealingex_dist_random/: config.txt
C++/Sem3/homeworks/HW10/samples/annealingex_stddev_random/: config.txt
C++/Sem3/homeworks/HW10/samples/dummy_dummy_random/: config.txt
C++/Sem3/homeworks/HW10/tests/: generateOrders.py
C++/Sem3/homeworks/HW4/rational/lib_poly/: CMakeLists.txt  lib_poly.cpp  lib_poly.h  libpoly-config.cmake
C++/Sem3/homeworks/HW4/rational/lib_poly/test/: CMakeLists.txt  polyTest.cpp
C++/Sem3/homeworks/HW4/rational/lib_rational/: CMakeLists.txt  lib_rational.cpp  lib_rational.h  librational-config.cmake
C++/Sem3/homeworks/HW4/rational/lib_rational/test/: CMakeLists.txt  rationalTest.cpp
C++/Sem3/homeworks/HW4/rational/rational_poly/: CMakeLists.txt  rational_poly.cpp
DiscreteMaths/Lab/: Makefile
DiscreteMaths/Lab/Turing/: aplusb.out  balanced.out  convertto2.out  less.out  less.test.py  mirror.out  reverse.out  tandem.out
Java/: .gitignore  activate.fish  import.fish  import.sh
Java/Homeworks/HW1/: .gitignore
Java/Homeworks/HW2/: .git.tar.xz
Java/Homeworks/HW4/: TODO
Java/Homeworks/HW5/: MANIFEST.MF  build.fish  clean.fish  javadoc.fish
MathAnalysis/Sem4/: Integrals.html  Makefile
MathLogic/: Defs.html  Defs.md  Makefile
MathLogic/Colloq/: Defs.html  Defs.md  Makefile
MathLogic/Colloq/utility/: __header.html
MathLogic/Hw/: turing_machines.txt
MathLogic/Lab/A_Parser/: Main.hs  Makefile  Parser.hs  Parser.y  Tokeniser.hs
MathLogic/Lab/B_Minimization_2_slow_but_working/: Axioms.hs  Lexer.x  Main.aux  Main.hs  ModusPonens.hs  Parser.y  Utils.hs
MathLogic/Lab/B_Minimization_3_ugly_and_fast/: Axioms.hs  Main.hs  Makefile  Tokeniser.hs  Utils.hs
MathLogic/Lab/B_Minimization_tests/: test1.txt  test2.txt  test4_880k.txt  test4_93k.txt
MathLogic/Lab/C_Glivenko/: Axioms.hs  Main.hs  Makefile  ModusPonens.hs  Parser.hs  Parser.y  Templates.hs  Templates.txt  Tokeniser.hs  Utils.hs  tst.py
MathLogic/Lab/D_Proove/: Axioms.hs  Deduce.hs  ElementaryProofs.hs  Lexer.x  Main.hs  Makefile  Parser.y  guide.txt  run.sh
mk/: html_to_pdf.mk
(+290 files in other folders)
